--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "expo": "~44.0.0",
     "expo-clipboard": "~2.1.0",
     "expo-status-bar": "~1.2.0",
